SyntacticAnalyzer/tests/fail/atributo01.java
class foo {
	// el no-terminal usado para separar variables es ,
	var char c1;c2;c3;

}
